--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,3 +1,7 @@
 style = IntelliJ
 maxColumn = 120
 project.git = true
+version = 1.0.0-RC1
+newlines.afterImplicitKWInVerticalMultiline = false
+newlines.beforeImplicitKWInVerticalMultiline = false
+newlines.sometimesBeforeColonInMethodReturnType = true
