--- a/.travis.yml
+++ b/.travis.yml
@@ -2,14 +2,11 @@ language: scala
 scala:
    - 2.11.11
    - 2.11.12
-   - 2.12.1
-   - 2.12.2
-   - 2.12.3
-   - 2.12.4
-   - 2.12.5
    - 2.12.6
+   - 2.12.7
 jdk:
   - openjdk8
+  - openjdk11
 
 dist: trusty
 sudo: false
