--- a/.travis.yml
+++ b/.travis.yml
@@ -8,20 +8,32 @@ jdk:
   - openjdk11
 
 dist: trusty
-sudo: false
+sudo: required
+
+addons:
+  apt:
+    update: true
 
 cache:
   directories:
     - $HOME/.ivy2/cache
     - $HOME/.sbt/boot
 
+before_install:
+  - unset _JAVA_OPTIONS
+  - export JAVA_OPTS="$JAVA_OPTS -Xms512m -Xmx2048m"
+
 before_cache:
   # Tricks to avoid unnecessary cache updates
   - find $HOME/.ivy2 -name "ivydata-*.properties" -delete
   - find $HOME/.sbt -name "*.lock" -delete
 
+before_script:
+  - unset _JAVA_OPTIONS
+  - if [[ "$TRAVIS_SCALA_VERSION" == 2.11.* ]]; then curl https://raw.githubusercontent.com/scala-native/scala-native/master/scripts/travis_setup.sh | bash -x; fi
+
 script:
-  - sbt ++$TRAVIS_SCALA_VERSION clean scalafmtCheck test:scalafmtCheck compile chimneyJS/test coverage chimneyJVM/test coverageReport
+  - if [[ "$TRAVIS_SCALA_VERSION" == 2.11.* ]]; then testNative=chimneyNative/test; else testNative=""; fi && sbt ++$TRAVIS_SCALA_VERSION clean scalafmtCheck test:scalafmtCheck compile chimneyJS/test $testNative coverage chimneyJVM/test coverageReport
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
