--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,5 +35,11 @@ jobs:
         uses: olafurpg/setup-scala@v5
         with:
           java-version: ${{ matrix.jvm }}
+      - name: Install Scala Native deps (2.11 build only)
+        if: startsWith( ${{ matrix.scala }}, '2.11' )
+        run: curl https://raw.githubusercontent.com/scala-native/scala-native/master/scripts/travis_setup.sh | bash -x
       - name: Clean, Check code formatting, compile, test, generate coverage report
         run: sbt ++${{ matrix.scala }} clean scalafmtCheck test:scalafmtCheck compile chimneyJS/test coverage chimneyJVM/test coverageReport
+      - name: Run Scala Native tests
+        if: startsWith( ${{ matrix.scala }}, '2.11' )
+        run: sbt chimneyNative/test
