--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,7 @@ jobs:
         jvm:
           - openjdk@8
           - openjdk@1.11
+      fail-fast: false
 
     steps:
       - uses: actions/checkout@v1
