--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,14 +13,8 @@ jobs:
 
     strategy:
       matrix:
-        scala: [2.11.12, 2.12.12, 2.13.3]
+        scala: [2.12.12, 2.13.3]
         jvm: [openjdk@8, openjdk@1.11]
-        scalajs: [0.6.33, 1.2.0]
-        exclude:
-          - scala: 2.11.12
-            scalajs: 1.1.1
-          - scala: 2.13.3
-            scalajs: 0.6.33
       fail-fast: false
 
     steps:
@@ -41,18 +35,8 @@ jobs:
         uses: olafurpg/setup-scala@v5
         with:
           java-version: ${{ matrix.jvm }}
-      - name: Install Scala Native deps (2.11 builds only)
-        if: startsWith(matrix.scala, '2.11' )
-        run: sudo apt-get install -y clang libgc-dev libunwind8-dev libre2-dev
       - name: Clean, Check code formatting, compile, test, generate coverage report
         run: sbt ++${{ matrix.scala }} clean scalafmtCheck test:scalafmtCheck compile chimneyJS/test coverage chimneyJVM/test chimneyJVM/coverageReport
-        env:
-          SCALAJS_VERSION: ${{ matrix.scalajs }}
-      - name: Run Scala Native tests (2.11 builds only)
-        if: startsWith(matrix.scala, '2.11' )
-        run: sbt ++${{ matrix.scala }} chimneyNative/test
-        env:
-          SCALAJS_VERSION: ${{ matrix.scalajs }}
       - uses: codecov/codecov-action@v1
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
