ci script update

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,21 +18,9 @@ jobs:
       fail-fast: false
 
     steps:
-      - uses: actions/checkout@v1
-      - name: Cache .jabba
-        id: cache-jabba
-        uses: actions/cache@v1
-        with:
-          path: ~/.jabba
-          key: ${{ runner.os }}-jabba
-      - name: Cache .sbt
-        id: cache-sbt
-        uses: actions/cache@v1
-        with:
-          path: ~/.sbt
-          key: ${{ runner.os }}-sbt
-      - name: Set up ${{ matrix.jvm }}
-        uses: olafurpg/setup-scala@v5
+      - uses: actions/checkout@v2
+      - uses: coursier/cache-action@v6
+      - uses: olafurpg/setup-scala@v10
         with:
           java-version: ${{ matrix.jvm }}
       - name: Clean, Check code formatting, compile, test, generate coverage report
