update versions (scala/jvm) in ci.yml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,8 +13,8 @@ jobs:
 
     strategy:
       matrix:
-        scala: [2.12.12, 2.13.3]
-        jvm: [openjdk@8, openjdk@1.11]
+        scala: [2.12.12, 2.13.5]
+        jvm: [adopt@1.8.0-275, adopt@1.15.0-1]
       fail-fast: false
 
     steps:
