--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,6 +1,7 @@
-version = 2.3.0
+version = 3.0.8
+runner.dialect = scala213
 project.git = true
 maxColumn = 120
-newlines.afterImplicitKWInVerticalMultiline = false
-newlines.beforeImplicitKWInVerticalMultiline = false
+verticalMultiline.newlineAfterImplicitKW = false
+verticalMultiline.newlineBeforeImplicitKW = false
 newlines.sometimesBeforeColonInMethodReturnType = true
