minimize formatting diff

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -5,3 +5,4 @@ maxColumn = 120
 verticalMultiline.newlineAfterImplicitKW = false
 verticalMultiline.newlineBeforeImplicitKW = false
 newlines.sometimesBeforeColonInMethodReturnType = true
+docstrings.style = keep
