Partial transformers draft

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -4,3 +4,4 @@ maxColumn = 120
 newlines.afterImplicitKWInVerticalMultiline = false
 newlines.beforeImplicitKWInVerticalMultiline = false
 newlines.sometimesBeforeColonInMethodReturnType = true
+lineEndings=unix
