--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,7 @@ jobs:
 
   benchmark:
     needs: build
+    runs-on: ubuntu-latest
 #    runs-on: benchmarks
     concurrency: 'benchmark'
 #    if: >
