--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,6 @@ jobs:
 
   benchmark:
     needs: build
-#    runs-on: ubuntu-latest
     runs-on: benchmarks
     concurrency: 'benchmark'
     if: >
@@ -54,8 +53,13 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v1
 
+      - uses: coursier/cache-action@v6
+      - uses: olafurpg/setup-scala@v11
+        with:
+          java-version: openjdk@1.17.0 # TODO LB java version from matrix
+
       - name: Run benchmarks
-        run: "sbt 'benchmarks/Jmh/run -rf json -rff ${{ github.sha }}.json'" # TODO LB maybe select Scala version until matrix is supported?
+        run: "sbt '++2.13.8 benchmarks/Jmh/run -rf json -rff ${{ github.sha }}.json'" # TODO LB scala version from matrix
 
       - name: Fetch benchmarks metadata
         run: curl https://raw.githubusercontent.com/scalalandio/chimney-benchmark-results/main/meta.json -o meta.json
