--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,7 +59,7 @@ jobs:
           java-version: openjdk@1.17.0 # TODO LB java version from matrix
 
       - name: Run benchmarks
-        run: "sbt '++2.13.8 benchmarks/Jmh/run -rf json -rff $(pwd)/${{ github.sha }}.json'" # TODO LB scala version from matrix
+        run: sbt "++2.13.8 benchmarks/Jmh/run -rf json -rff $(pwd)/${{ github.sha }}.json" # TODO LB scala version from matrix
 
       - name: Fetch benchmarks metadata
         run: curl https://raw.githubusercontent.com/scalalandio/chimney-benchmark-results/main/meta.json -o meta.json
