--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,18 +20,16 @@ jobs:
       fail-fast: false
 
     steps:
-      - run: | # TODO uncomment
-          echo "BUILD SUCCESSFUL BY ACCLAMATION"
-#      - uses: actions/checkout@v2
-#      - uses: coursier/cache-action@v6
-#      - uses: olafurpg/setup-scala@v11
-#        with:
-#          java-version: ${{ matrix.jvm }}
-#      - name: Clean, Check code formatting, compile, test, generate coverage report
-#        run: sbt ++${{ matrix.scala }} clean scalafmtCheck test:scalafmtCheck compile chimneyJS/test coverage chimneyJVM/test chimneyJVM/coverageReport
-#      - uses: codecov/codecov-action@v1
-#        with:
-#          token: ${{ secrets.CODECOV_TOKEN }}
+      - uses: actions/checkout@v2
+      - uses: coursier/cache-action@v6
+      - uses: olafurpg/setup-scala@v11
+        with:
+          java-version: ${{ matrix.jvm }}
+      - name: Clean, Check code formatting, compile, test, generate coverage report
+        run: sbt ++${{ matrix.scala }} clean scalafmtCheck test:scalafmtCheck compile chimneyJS/test coverage chimneyJVM/test chimneyJVM/coverageReport
+      - uses: codecov/codecov-action@v1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
 
   benchmark:
     needs: build
@@ -43,13 +41,6 @@ jobs:
       (github.event.action == 'synchronize' && contains(github.event.pull_request.labels.*.name, 'benchmark'))
     environment: 'benchmark'
     steps:
-      - name: Debug
-        run: |
-          echo "event_name==push:${{ github.event_name == 'push' }}"
-          echo "action==labeled:${{github.event.action == 'labeled'}}"
-          echo "label.name==benchmark:${{github.event.label.name == 'benchmark'}}"
-          echo "action==synchronize:${{github.event.action == 'synchronize'}}"
-          echo "contains(labels, 'benchmark'):${{contains(github.event.pull_request.labels.*.name, 'benchmark')}}"
       - name: Checkout
         uses: actions/checkout@v1
 
