--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,13 +16,15 @@ jobs:
     strategy:
       matrix:
         scala: [2.12.16, 2.13.8]
-        jvm: [adopt@1.8.0-292, openjdk@1.17.0]
+        jvm: ['adopt:1.8.0-292', 'adoptium:1.17.0.5']
       fail-fast: false
 
     steps:
       - uses: actions/checkout@v3
       - uses: coursier/cache-action@v6
-      - uses: coursier/setup-action@v1
+      - uses: coursier/setup-action@v1.3.0
+        with:
+          jvm: ${{ matrix.jvm }}
       - name: Clean, Check code formatting, compile, test, generate coverage report
         run: sbt ++${{ matrix.scala }} clean scalafmtCheck test:scalafmtCheck compile chimneyJS/test coverage chimneyJVM/test chimneyJVM/coverageReport
       - uses: codecov/codecov-action@v3
