--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,7 @@ jobs:
       - uses: coursier/setup-action@v1.3.0
         with:
           jvm: ${{ matrix.jvm }}
+          apps: sbt
       - name: Clean, Check code formatting, compile, test, generate coverage report
         run: sbt ++${{ matrix.scala }} clean scalafmtCheck test:scalafmtCheck compile chimneyJS/test coverage chimneyJVM/test chimneyJVM/coverageReport
       - uses: codecov/codecov-action@v3
@@ -45,9 +46,10 @@ jobs:
         uses: actions/checkout@v3
 
       - uses: coursier/cache-action@v6
-      - uses: olafurpg/setup-scala@v13
+      - uses: coursier/setup-action@v1.3.0
         with:
-          java-version: openjdk@1.17.0 # TODO LB java version from matrix
+          jvm: 'adoptium:1.17.0.5' # TODO LB java version from matrix
+          apps: sbt
 
       - name: Run benchmarks
         run: sbt "++2.13.10 benchmarks/Jmh/run -rf json -rff $(pwd)/${{ github.sha }}.json" # TODO LB scala version from matrix
