--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
           jvm: ${{ matrix.jvm }}
           apps: sbt
       - name: Clean, Check code formatting, compile, test, generate coverage report
-        run: sbt ++${{ matrix.scala }} clean scalafmtCheck test:scalafmtCheck compile chimneyJS/test coverage chimneyJVM/test chimneyJVM/coverageReport
+        run: sbt ++${{ matrix.scala }} clean scalafmtCheck test:scalafmtCheck compile chimneyJS/test chimneyCatsJS/test coverage chimneyJVM/test chimneyCatsJVM/test chimneyJVM/coverageReport chimneyCatsJVM/coverageReport
       - uses: codecov/codecov-action@v3
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
