--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
 
     strategy:
       matrix:
-        scala: [2.12.17, 2.13.10]
+        scala: ["2_12", "2_13"]
         jvm: ['adopt:1.8.0-292', 'adoptium:1.17.0.5']
       fail-fast: false
 
@@ -27,7 +27,7 @@ jobs:
           jvm: ${{ matrix.jvm }}
           apps: sbt
       - name: Clean, Check code formatting, compile, test, generate coverage report
-        run: sbt ++${{ matrix.scala }} clean scalafmtCheck test:scalafmtCheck compile chimneyJS/test coverage chimneyJVM/test chimneyJVM/coverageReport
+        run: sbt ci-${{ matrix.scala }}
       - uses: codecov/codecov-action@v3
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
