--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
       - uses: coursier/cache-action@v6
       - uses: coursier/setup-action@v1.3.0
         with:
@@ -52,7 +54,7 @@ jobs:
           apps: sbt
 
       - name: Run benchmarks
-        run: sbt "++2.13.10 benchmarks/Jmh/run -rf json -rff $(pwd)/${{ github.sha }}.json" # TODO LB scala version from matrix
+        run: sbt "++2.13.10 benchmarks/Jmh/run -rf json -rff $(pwd)/$(git describe --tags --always).json" # TODO LB scala version from matrix
 
       - name: Fetch benchmarks metadata
         run: curl https://raw.githubusercontent.com/scalalandio/chimney-benchmark-results/main/meta.json -o meta.json
@@ -71,8 +73,8 @@ jobs:
         run: |
           mkdir -p ./results
           mv meta.json ./results
-          mv ${{ github.sha }}.json ./results
-          echo "${{ github.sha }}" > ./results/sha
+          mv $(git describe --tags --always).json ./results
+          echo "$(git describe --tags --always)" > ./results/version
 
       - name: Upload benchmark results
         uses: actions/upload-artifact@v2
