--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,11 +76,12 @@ jobs:
 
       - name: Save benchmark results
         run: |
-          mkdir -p ./results/${{ github.event_name }}/${{ github.sha }}
+          SHA=$(cat sha)
+          mkdir -p ./results/${{ github.event_name }}/$SHA
           mv meta.json ./results
-          mv $(git describe --tags --always).json ./results/${{ github.event_name }}/${{ github.sha }}
+          mv sha ./results
+          mv $(git describe --tags --always).json ./results/${{ github.event_name }}/$SHA
           echo "$(git describe --tags --always)" > ./results/version
-          echo "${{ github.sha }}" > ./results/sha
           echo "${{ github.event_name }}" > ./results/event
 
       - name: Upload benchmark results
