migrate to -Xsource:3, adjust the whole codebase

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,7 +1,18 @@
-version = 2.3.0
+version = 3.5.9
 project.git = true
 maxColumn = 120
-newlines.afterImplicitKWInVerticalMultiline = false
-newlines.beforeImplicitKWInVerticalMultiline = false
+runner.dialect = Scala213Source3
+
+align.preset = some
+
+rewrite.rules = [Imports, SortModifiers]
+rewrite.imports.sort = scalastyle
+
+rewrite.scala3.convertToNewSyntax = true
+rewrite.scala3.removeOptionalBraces = false
+
+docstrings.style = keep
+docstrings.wrap = no
+
 newlines.sometimesBeforeColonInMethodReturnType = true
 lineEndings=unix
