--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -2,9 +2,9 @@ name: Build docs
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, scala-3 ] # TODO: remove scala-3 before merging to master
   pull_request:
-    branches: [ master ]
+    branches: [ master, scala-3 ] # TODO: remove scala-3 before merging to master
 
 jobs:
   build:
