Add quickfix for munit compileErrors issue

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -9,6 +9,9 @@ fileOverride {
   "glob:**/chimney/src/main/scala-3/**" {
     runner.dialect = scala3
   }
+  "glob:**/chimney/src/test/scala-3/**" {
+    runner.dialect = scala3
+  }
 }
 
 align.preset = some
