Extracted separate module for non-chimney-specific macro-shared code

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -3,6 +3,9 @@ project.git = true
 maxColumn = 120
 runner.dialect = Scala213Source3
 fileOverride {
+  "glob:**/chimney-macro-commons/src/main/scala-3/**" {
+    runner.dialect = scala3
+  }
   "glob:**/chimney/src/main/scala-3/**" {
     runner.dialect = scala3
   }
