--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,17 +1,10 @@
-version = 3.5.9
+version = 3.7.10
 project.git = true
 maxColumn = 120
 runner.dialect = Scala213Source3
 fileOverride {
-  "glob:**/chimney-macro-commons/src/main/scala-3/**" {
-    runner.dialect = scala3
-  }
-  "glob:**/chimney/src/main/scala-3/**" {
-    runner.dialect = scala3
-  }
-  "glob:**/chimney/src/test/scala-3/**" {
-    runner.dialect = scala3
-  }
+  "glob:**/src/main/scala-3/**" { runner.dialect = scala3 }
+  "glob:**/src/test/scala-3/**" { runner.dialect = scala3 }
 }
 
 align.preset = some
