--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -9,13 +9,15 @@ fileOverride {
 
 align.preset = some
 
-rewrite.rules = [Imports, SortModifiers]
+rewrite.rules = [Imports, RedundantBraces, SortModifiers]
 rewrite.imports.sort = scalastyle
+rewrite.redundantBraces.stringInterpolation = true
 
 rewrite.scala3.convertToNewSyntax = true
 rewrite.scala3.removeOptionalBraces = false
 
-docstrings.style = keep
+docstrings.blankFirstLine = no
+docstrings.style = SpaceAsterisk
 docstrings.wrap = no
 
 newlines.sometimesBeforeColonInMethodReturnType = true
