--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -5,12 +5,10 @@
 # Required
 version: 2
 
-build:
-  os: ubuntu-22.04
-  tools:
-    python: "3.11"
+python:
+  version: 3.7
+  install:
+    - requirements: docs/requirements.txt
 
-# Build documentation in the "docs/" directory with Sphinx
-sphinx:
-  configuration: docs/source/conf.py
-
+mkdocs:
+  configuration: docs/mkdocs.yml
