Pin mkdocs versions and prepare landing and getting started

--- a/docs/Dockerfile
+++ b/docs/Dockerfile
@@ -1,2 +1,2 @@
-FROM squidfunk/mkdocs-material
-RUN pip install mkdocs-macros-plugin
+FROM squidfunk/mkdocs-material:9.4.4
+RUN pip install mkdocs-macros-plugin==1.0.4
