--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -5,8 +5,15 @@
 # Required
 version: 2
 
+build:
+  os: ubuntu-22.04
+  tools:
+    python: "3.11"
+  jobs:
+    post_checkout:
+      - git fetch --unshallow || true
+
 python:
-  version: 3.7
   install:
     - requirements: docs/requirements.txt
 
