--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -47,7 +47,7 @@ markdown_extensions:
   - pymdownx.superfences
 plugins:
   - macros
-copyright: 'Copyright © 2017 - 2023, <a href="https://scalaland.io">scalaland.io</a>.'
+copyright: 'Copyright © 2017—2023, <a href="https://scalaland.io">Scalaland.io</a>.<br />Chimney is FOSS released with Apache 2.0 licence'
 extra:
   generator: false
   social:
