More documentation ported from old docs

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -17,6 +17,7 @@ theme:
     - navigation.instant.progress
     - navigation.path
     - navigation.sections
+    - navigation.tracking
     - navigation.tabs
     - navigation.tabs.sticky
     - toc.integrate
