--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,10 +1,12 @@
 version = 3.7.15
 project.git = true
+project.includePaths."+" = ["glob:docs/**.md"]
 maxColumn = 120
 runner.dialect = Scala213Source3
 fileOverride {
   "glob:**/src/main/scala-3/**" { runner.dialect = scala3 }
   "glob:**/src/test/scala-3/**" { runner.dialect = scala3 }
+  "glob:docs/**.md" { rewrite.scala3.convertToNewSyntax = false }
 }
 
 align.preset = some
