Build on every push to master OR tag, publish artifact after every successful build of master, align format of each .yml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,9 +3,10 @@ name: CI build
 on:
   push:
     branches: [ master ]
+    tags: [ '*' ]
   pull_request:
     branches: [ master ]
-    types: ['opened', 'reopened', 'labeled', 'synchronize']
+    types: [ opened, reopened, labeled, synchronize ]
 
 jobs:
   check-formatting:
