--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,10 @@
 name: Sonatype Release
 
 on:
-  push:
-    branches:
-      - master
+  workflow_run:
+    workflows: [ 'CI build' ]
+    branches: [ master ]
+    types: [ completed ]
 
 jobs:
   release-tag:
