--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,10 +1,9 @@
 name: Sonatype Release
 
 on:
-  workflow_run:
-    workflows: [ 'CI build' ]
+  push:
     branches: [ master ]
-    types: [ completed ]
+    tags: [ '*' ]
 
 jobs:
   release-tag:
@@ -24,8 +23,8 @@ jobs:
         with:
           jvm: 'adopt:1.8.0-292'
           apps: sbt
-      - name: Stage all artifacts and then release them in batch
-        run:  sbt publishSigned sonatypeBundleRelease
+      - name: Publish all projects
+        run:  sbt ci-release
         env:
           RELEASE: true
           SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
